# rendeer

./: CMakeLists.txt  LICENSE  README.md
src/: rectangle3D.cpp  triforceCPU.cpp  triforceTransformFeedback.cpp
src/base/: utils.cpp  utils.h
